<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/airplane">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/registration_form"
        android:background="#6cf8ff"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editTextText10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:ems="6"
            android:inputType="text"
            android:textStyle="bold"
            android:hint="@string/firstname" />

        <EditText
            android:id="@+id/editTextText11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="text"
            android:textStyle="bold"
            android:hint="@string/lastname" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textStyle="bold"
            android:text="@string/gender"
            android:layout_marginTop="20dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/female" />

        </RadioGroup>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextText18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:ems="10"
        android:textStyle="bold"
        android:hint="@string/email"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextText19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textStyle="bold"
        android:hint="@string/phone_number"
        android:layout_gravity="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextText20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textStyle="bold"
        android:hint="@string/school"
        android:layout_gravity="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextText21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:textStyle="bold"
        android:hint="@string/student_id"
        android:inputType="text" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/register" />

</LinearLayout>